--- a/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
+++ b/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
@@ -6,7 +6,7 @@ Contains English localizations of values in Manifest.plist files in the playgrou
 */
 
 /* The localized name of the playground book. */
-"PlaygroundBookName" = "Playground Book";
+"PlaygroundBookName" = "WWDC19 Application Alexander Zank";
 
 /* The localized name of the first chapter in the playground book. */
 "ChapterOneName" = "Chapter One";
